<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodgree Apps</string>

    <string name="popMovies">Popular Movies</string>
    <string name="scoresApp">Scores App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildItBigger">Build It Bigger</string>
    <string name="xyzReader">XYZ Reader</string>
    <string name="capstoneApp">Capstone App</string>

    <string name="btn_clicked">This button will launch my %1$s app</string>
</resources>
