<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <android.support.v7.widget.Toolbar
            android:elevation="4dp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/title_margin"
            android:layout_marginTop="@dimen/title_margin"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/title_text_size" />

        <Button
            style="@style/AppButton"
            android:onClick="showMessage"
            android:text="@string/popMovies" />

        <Button
            style="@style/AppButton"
            android:onClick="showMessage"
            android:text="@string/scoresApp" />

        <Button
            style="@style/AppButton"
            android:onClick="showMessage"
            android:text="@string/libraryApp" />

        <Button
            style="@style/AppButton"
            android:onClick="showMessage"
            android:text="@string/buildItBigger" />

        <Button
            style="@style/AppButton"
            android:onClick="showMessage"
            android:text="@string/xyzReader" />

        <Button
            style="@style/CapstoneButton"
            android:layout_marginBottom="@dimen/bottom_button_margin"
            android:onClick="showMessage"
            android:text="@string/capstoneApp"
            android:textColor="@color/black" />
    </LinearLayout>

</ScrollView>